<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.User_LoginFragment"
    android:orientation="vertical"
    android:background="@color/backgroundColor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/welcomeUser"
        android:textColor="@color/fontColor"
        android:textSize="25sp"
        android:gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/newBookingBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:background="@color/backgroundColorBtn"
                android:text="@string/newBooking"
                android:textColor="@color/fontColor" />

            <Button
                android:id="@+id/myBookingsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:background="@color/backgroundColorBtn"
                android:text="@string/myBookings"
                android:textColor="@color/fontColor" />

            <Button
                android:id="@+id/cancelBookingBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:background="@color/backgroundColorBtn"
                android:text="@string/cancelBooking"
                android:textColor="@color/fontColor" />

            <Button
                android:id="@+id/myDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:background="@color/backgroundColorBtn"
                android:text="@string/myDetails"
                android:textColor="@color/fontColor" />

            <Button
                android:id="@+id/feedbackBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:background="@color/backgroundColorBtn"
                android:text="@string/feedback"
                android:textColor="@color/fontColor" />

            <Button
                android:id="@+id/logoutBtn_User_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:background="@color/backgroundColorBtn"
                android:text="@string/logout"
                android:textColor="@color/fontColor" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
