<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anashamidkh.parkingsystem.SignupActivity"
    android:background="@color/backgroundColor">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/signup"
        android:textColor="@color/fontColor"
        android:textSize="50sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/name_Signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:textColor="@color/editTextFontColor"/>

    <EditText
        android:id="@+id/email_Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/emailAddress"
        android:textColor="@color/editTextFontColor"
        android:layout_below="@+id/name_Signup"
        android:layout_alignLeft="@+id/name_Signup"
        android:layout_alignStart="@+id/name_Signup"
        android:layout_marginTop="38dp"
        android:layout_alignRight="@+id/name_Signup"
        android:layout_alignEnd="@+id/name_Signup" />

    <EditText
        android:id="@+id/password_Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/email_Signup"
        android:layout_alignLeft="@+id/email_Signup"
        android:layout_alignRight="@+id/email_Signup"
        android:layout_alignStart="@+id/email_Signup"
        android:layout_below="@+id/email_Signup"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/editTextFontColor"/>

    <EditText
        android:id="@+id/phone_Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_Signup"
        android:layout_alignStart="@+id/password_Signup"
        android:layout_below="@+id/password_Signup"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:inputType="phone"
        android:layout_alignRight="@+id/password_Signup"
        android:layout_alignEnd="@+id/password_Signup"
        android:hint="@string/phoneNumber"
        android:textColor="@color/editTextFontColor"/>

    <Button
        android:id="@+id/signupBtn_Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:background="@color/backgroundColorBtn"
        android:text="@string/signup"
        android:textColor="@color/fontColor" />

</RelativeLayout>
