<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anashamidkh.parkingsystem.SlotsActivity"
    android:orientation="vertical"
    android:background="@color/backgroundColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="25dp"
                android:textSize="20sp"
                android:textColor="@color/editTextFontColor"/>
            <EditText
                android:id="@+id/date_Slots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="57dp"
                android:layout_marginRight="50dp"
                android:hint="DD/MM/YYY"
                android:textSize="20sp"
                android:inputType="date"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="50dp"
                android:text="@string/time"
                android:textColor="@color/editTextFontColor"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/timeSpinner_Slots"
                style="@style/spinnerItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="57dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="25dp"
                android:textSize="20sp"
                android:textColor="@color/editTextFontColor"/>
            <Spinner
                android:id="@+id/durationSpinner_Slots"
                style="@style/spinnerItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="50dp">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/search_Slots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_gravity="center"
                android:background="@color/backgroundColorBtn"
                android:textColor="@color/fontColor"
                android:textStyle="bold"
                android:text="@string/search"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/slot1_Slots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="50dp"
                android:background="@color/initialColorOfSlots"
                android:gravity="center"
                android:text="@string/slot1"
                android:textColor="@color/fontColor"/>

            <Button
                android:id="@+id/slot2_Slots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:background="@color/initialColorOfSlots"
                android:text="@string/slot2"
                android:textColor="@color/fontColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/slot3_Slots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="50dp"
                    android:gravity="center"
                    android:background="@color/initialColorOfSlots"
                    android:text="@string/slot3"
                    android:textColor="@color/fontColor"/>

                <Button
                    android:id="@+id/slot4_Slots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="50dp"
                    android:background="@color/initialColorOfSlots"
                    android:gravity="center"
                    android:text="@string/slot4"
                    android:textColor="@color/fontColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/slot5_Slots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginBottom="50dp"
                    android:gravity="center"
                    android:background="@color/initialColorOfSlots"
                    android:text="@string/slot5"
                    android:textColor="@color/fontColor"/>

                <Button
                    android:id="@+id/slot6_Slots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:background="@color/initialColorOfSlots"
                    android:gravity="center"
                    android:text="@string/slot6"
                    android:textColor="@color/fontColor" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>