<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anashamidkh.parkingsystem.BookingDescriptionActivity"
    android:orientation="vertical"
    android:background="@color/backgroundColor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:textColor="@color/fontColor"
        android:textSize="25sp"
        android:text="@string/bookingDesc"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textSize="20sp"
                android:textColor="@color/editTextFontColor"
                android:text="@string/bookingId"/>

            <EditText
                android:id="@+id/bookingId_BookingDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textSize="20sp"
                android:textColor="@color/fontColor"
                android:hint="null"
                android:inputType="none"
                android:focusable="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textSize="20sp"
                android:textColor="@color/editTextFontColor"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/name_BookingDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textSize="20sp"
                android:textColor="@color/fontColor"
                android:hint="null"
                android:inputType="none"
                android:focusable="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textSize="20sp"
                android:textColor="@color/editTextFontColor"
                android:text="@string/area"/>

            <EditText
                android:id="@+id/area_BookingDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textSize="20sp"
                android:textColor="@color/fontColor"
                android:hint="null"
                android:inputType="none"
                android:focusable="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textSize="20sp"
                android:textColor="@color/editTextFontColor"
                android:text="@string/slot"/>

            <EditText
                android:id="@+id/slot_BookingDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textSize="20sp"
                android:textColor="@color/fontColor"
                android:hint="null"
                android:inputType="none"
                android:focusable="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textSize="20sp"
                android:textColor="@color/editTextFontColor"
                android:text="@string/date"/>

            <EditText
                android:id="@+id/date_BookingDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textSize="20sp"
                android:textColor="@color/fontColor"
                android:hint="null"
                android:inputType="none"
                android:focusable="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textSize="20sp"
                android:textColor="@color/editTextFontColor"
                android:text="@string/time"/>

            <EditText
                android:id="@+id/time_BookingDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textSize="20sp"
                android:textColor="@color/fontColor"
                android:hint="null"
                android:inputType="none"
                android:focusable="false"/>

            <Button
                android:id="@+id/remove_BookingDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:background="@color/backgroundColorBtn"
                android:gravity="center"
                android:visibility="invisible"
                android:textColor="@color/fontColor"
                android:text="@string/remove"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
